--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,79 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	.button {
+		@apply text-3xl;
+		@apply bg-white;
+		@apply p-10;
+		@apply border-2;
+		@apply border-gray-100;
+	}
+
+	.button:hover {
+		@apply cursor-pointer;
+	}
+
+	.button.disabled:hover {
+		@apply cursor-default;
+	}
+}
+
+body {
+	background-image: linear-gradient(
+			112.5deg,
+			rgb(214, 214, 214) 0%,
+			rgb(214, 214, 214) 10%,
+			rgb(195, 195, 195) 10%,
+			rgb(195, 195, 195) 53%,
+			rgb(176, 176, 176) 53%,
+			rgb(176, 176, 176) 55%,
+			rgb(157, 157, 157) 55%,
+			rgb(157, 157, 157) 60%,
+			rgb(137, 137, 137) 60%,
+			rgb(137, 137, 137) 88%,
+			rgb(118, 118, 118) 88%,
+			rgb(118, 118, 118) 91%,
+			rgb(99, 99, 99) 91%,
+			rgb(99, 99, 99) 100%
+		),
+		linear-gradient(
+			157.5deg,
+			rgb(214, 214, 214) 0%,
+			rgb(214, 214, 214) 10%,
+			rgb(195, 195, 195) 10%,
+			rgb(195, 195, 195) 53%,
+			rgb(176, 176, 176) 53%,
+			rgb(176, 176, 176) 55%,
+			rgb(157, 157, 157) 55%,
+			rgb(157, 157, 157) 60%,
+			rgb(137, 137, 137) 60%,
+			rgb(137, 137, 137) 88%,
+			rgb(118, 118, 118) 88%,
+			rgb(118, 118, 118) 91%,
+			rgb(99, 99, 99) 91%,
+			rgb(99, 99, 99) 100%
+		),
+		linear-gradient(
+			135deg,
+			rgb(214, 214, 214) 0%,
+			rgb(214, 214, 214) 10%,
+			rgb(195, 195, 195) 10%,
+			rgb(195, 195, 195) 53%,
+			rgb(176, 176, 176) 53%,
+			rgb(176, 176, 176) 55%,
+			rgb(157, 157, 157) 55%,
+			rgb(157, 157, 157) 60%,
+			rgb(137, 137, 137) 60%,
+			rgb(137, 137, 137) 88%,
+			rgb(118, 118, 118) 88%,
+			rgb(118, 118, 118) 91%,
+			rgb(99, 99, 99) 91%,
+			rgb(99, 99, 99) 100%
+		),
+		linear-gradient(90deg, rgb(195, 195, 195), rgb(228, 228, 228));
+	background-blend-mode: overlay, overlay, overlay, normal;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+}
